apps/base/docuseal/release.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: docuseal-route
    namespace: docuseal
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - docuseal.midnightthoughts.space
    rules:
        - backendRefs:
            - name: docuseal
              port: 3000
          timeouts:
            request: 240s
            backendRequest: 0s
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6cVhIdzlyb0FPQm1ucUh2
[...]
            9gyVmy41ARJaZyYRdXncmbDCQY9jOr+QjElLT/LNgBDhVE4wGG6aRQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-03-22T17:07:47Z"
    mac: ENC[AES256_GCM,data:5N/IPtLZWbS2F4sNgF1T8BKaqtiUbS5Zunoay3u7WQyL9hPM6ApTjeUwl8WK8W6I7yqsKCmHtdpx1ZXVbIdZKAOXmXjCCgHj3ofRRMG6JCMF0WHgUMX87bM/Am9BP2GE2B5XdhGL8Zrp+wYJMB/D1fQRP8nv49N4bLByAGzpyEU=,iv:xHc3kra4zVESdc05PIYQ/fV3PvdtICbpSpO/VGSezdw=,tag:vNH7hbq/hlhplRbwrSN8tw==,type:str]
    pgp: []
    encrypted_regex: ^(adminPassword|adminEmail|jenkinsAdminEmail|securityRealm|gerrit.config|routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_secret|secret_key_base|otp_secret|private_key|public_key|primaryKey|deterministicKey|keyDerivationSalt|token|clientId|secretKey|installationId|installationKey|uriOverride|adminToken.value|password.value|sql_password|erlangCookie|AUTHENTICATION_PASSWORD|ROOM_API_SECRE [...]
    version: 3.9.1
