apps/base/docuseal/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: deployment-docuseal
    namespace: docuseal
spec:
    podSelector:
        matchLabels:
            app.kubernetes.io/instance: docuseal
            app.kubernetes.io/name: docuseal
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: envoy-gateway
                podSelector:
                    matchLabels:
                        app.kubernetes.io/component: proxy
                        app.kubernetes.io/name: envoy
                        gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
                        gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
          ports:
              - port: 3000
                protocol: TCP
    egress:
        - to:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: postgres-cluster
                podSelector:
                    matchLabels:
                        cnpg.io/cluster: pg-cluster-v2
                        cnpg.io/instanceName: pg-cluster-v2-5
                        cnpg.io/instanceRole: primary
                        cnpg.io/podRole: instance
                        role: primary
          ports:
              - port: 5432
                protocol: TCP
        - to:
              - namespaceSelector: {}
                podSelector:
                    matchLabels:
                        k8s-app: kube-dns
          ports:
              - port: 53
                protocol: UDP
